Fixed Most Lint Errors